log
Thu Apr 16 08:08:00 PM UTC 2026: 
 tests:  0|7
total_score: 0/60
ae2a3df
Thu Apr 16 08:09:24 PM UTC 2026: 
 tests:  0|7
total_score: 0/60
b3e37e4
Thu Apr 16 08:11:58 PM UTC 2026: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘createMap’:
hashmap.c:48:25: error: invalid initializer
   48 |     HashMap nuevoMapa = malloc(sizeof(HashMap));
      |                         ^~~~~~
hashmap.c:50:12: error: ‘mapaNuevo’ undeclared (first use in this function)
   50 |     return mapaNuevo;
      |            ^~~~~~~~~
hashmap.c:50:12: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:48:13: error: unused variable ‘nuevoMapa’ [-Werror=unused-variable]
   48 |     HashMap nuevoMapa = malloc(sizeof(HashMap));
      |             ^~~~~~~~~
hashmap.c:51:1: error: control reaches end of non-void function [-Werror=return-type]
   51 | }
      | ^
cc1: all warnings being treated as errors
ed1a564
Thu Apr 16 08:12:36 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘createMap’:
hashmap.c:50:12: error: ‘mapaNuevo’ undeclared (first use in this function)
   50 |     return mapaNuevo;
      |            ^~~~~~~~~
hashmap.c:50:12: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:48:16: error: unused variable ‘nuevoMapa’ [-Werror=unused-variable]
   48 |     HashMap ** nuevoMapa = malloc(sizeof(HashMap));
      |                ^~~~~~~~~
hashmap.c:51:1: error: control reaches end of non-void function [-Werror=return-type]
   51 | }
      | ^
cc1: all warnings being treated as errors
6e07cad
Thu Apr 16 08:19:59 PM UTC 2026: 
 hashmap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:63:5: error: ‘pos’ undeclared (first use in this function); did you mean ‘pow’?
   63 |     pos = hash(key, map->capacity);
      |     ^~~
      |     pow
hashmap.c:63:5: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:65:21: error: invalid initializer
   65 |     Pair nuevoPar = createPair(key, value);
      |                     ^~~~~~~~~~
5b60c54
Thu Apr 16 08:21:11 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:63:5: error: ‘pos’ undeclared (first use in this function); did you mean ‘pow’?
   63 |     pos = hash(key, map->capacity);
      |     ^~~
      |     pow
hashmap.c:63:5: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:65:21: error: invalid initializer
   65 |     Pair nuevoPar = createPair(key, value);
      |                     ^~~~~~~~~~
5ccfb3d
Thu Apr 16 08:21:40 PM UTC 2026: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|7
total_score: 0/60
3b6eec5
Thu Apr 16 08:23:13 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 5/60
5126803
Thu Apr 16 08:27:05 PM UTC 2026: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:71:17: error: ‘return’ with a value, in function returning void [-Wreturn-mismatch]
   71 |     else return NULL;
      |                 ^~~~
hashmap.c:62:6: note: declared here
   62 | void insertMap(HashMap * map, char * key, void * value) {
      |      ^~~~~~~~~
f8d0fab
Thu Apr 16 08:27:17 PM UTC 2026: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  1|6
total_score: 5/60
230b684
Thu Apr 16 08:30:35 PM UTC 2026: 
 hashmap.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:69:17: error: statement with no effect [-Werror=unused-value]
   69 |             pos == 0;
      |             ~~~~^~~~
cc1: all warnings being treated as errors
2b3655c
Thu Apr 16 08:30:56 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:69:17: error: statement with no effect [-Werror=unused-value]
   69 |             pos == -1;
      |             ~~~~^~~~~
cc1: all warnings being treated as errors
8f525be
Thu Apr 16 08:31:07 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|6
total_score: 5/60
5e7ece4
Thu Apr 16 08:31:23 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|6
total_score: 5/60
9e2ef1a
Thu Apr 16 08:33:04 PM UTC 2026: 
 hashmap.c | 5 +++++
 1 file changed, 5 insertions(+)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:73:13: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘bucket’; did you mean ‘buckets’?
   73 |     if(map->bucket[pos]->key == NULL){
      |             ^~~~~~
      |             buckets
ddf30c2
Thu Apr 16 08:33:17 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
ccc61bb
Thu Apr 16 08:33:59 PM UTC 2026: 
 hashmap.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
 tests:  0|0
8218cb6
Thu Apr 16 08:34:42 PM UTC 2026: 
 hashmap.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
 tests:  3|6
total_score: 5/60
e197f25
Thu Apr 16 08:34:57 PM UTC 2026: 
 hashmap.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  3|6
total_score: 5/60
1c18dbc
Thu Apr 16 08:36:11 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:69:13: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   69 |         if (pos = map->capacity){
      |             ^~~
cc1: all warnings being treated as errors
668e09f
Thu Apr 16 08:36:36 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 15/60
f65c222
Thu Apr 16 08:39:41 PM UTC 2026: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  5|5
total_score: 15/60
85f3a43
Thu Apr 16 08:40:38 PM UTC 2026: 
 hashmap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  5|5
total_score: 15/60
b12386e
Thu Apr 16 08:42:10 PM UTC 2026: 
 hashmap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|0
824bf53
Thu Apr 16 08:43:05 PM UTC 2026: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
43918a8
Thu Apr 16 08:43:48 PM UTC 2026: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:94:17: error: comparison between pointer and integer [-Werror]
   94 |         if (pos == NULL) return NULL;
      |                 ^~
cc1: all warnings being treated as errors
db3442c
Thu Apr 16 08:44:02 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
ab83890
Thu Apr 16 08:44:26 PM UTC 2026: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
5fc3fbd
Thu Apr 16 08:44:42 PM UTC 2026: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
cf6b43d
Thu Apr 16 08:44:56 PM UTC 2026: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|5
total_score: 15/60
99c02a0
Thu Apr 16 08:45:36 PM UTC 2026: 
 hashmap.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  4|5
total_score: 15/60
8fdb2c2
Thu Apr 16 08:46:36 PM UTC 2026: 
 hashmap.c | 11 ++++++-----
 1 file changed, 6 insertions(+), 5 deletions(-)
 tests:  5|5
total_score: 15/60
02b1933
Thu Apr 16 08:47:28 PM UTC 2026: 
 hashmap.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:101:12: error: redefinition of ‘parEncontrado’
  101 |     Pair * parEncontrado = map->buckets[pos];
      |            ^~~~~~~~~~~~~
hashmap.c:88:12: note: previous definition of ‘parEncontrado’ with type ‘Pair *’
   88 |     Pair * parEncontrado = map->buckets[pos];
      |            ^~~~~~~~~~~~~
128c325
Thu Apr 16 08:48:35 PM UTC 2026: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  4|5
total_score: 15/60
67e949c
